fix: contrast ratio between elements

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'IBM Plex Sans', 'Nunito', 'Jura', sans-serif;
-  background-color: #fff5f5;
+  background-color: #4a497a;
 }
 
 a {
